# C-BAND

./: CMakeLists.txt  README
Banks4/: CMakeLists.txt
Hipo4/: CMakeLists.txt
Scripts_Spring19_Hipo3/190304_hipo2root/: hipo2root.cpp
Scripts_Spring19_Hipo3/190304_hipo2root/include/: global_offset_fadc.txt
Scripts_Spring19_Hipo4/: CMakeLists.txt
Scripts_Spring19_Hipo4/190301_TimeWalkParameters/: timeWalk.cpp
Scripts_Spring19_Hipo4/190304_hipo2root/: CMakeLists.txt  hipo2root.cpp
